--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<h1>This is<br />
 						OF<span class="i">i</span>DCrypt</h1>
 						<p>"Opening the door to the World of Cryptocurrency for everyone through articles, tools and knowledge."</p>
-						<h4>Visit <a href="https://x.com/OFDCrypt">@OF<span class="i">i</span>DCrypt</a> on 𝕏</h4>
+						<h4>Visit <a href="https://x.com/OFiDCrypt">@OF<span class="i">i</span>DCrypt</a> on 𝕏</h4>
 						<!--<p>Site template by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>-->
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
