--- a/pages/about.html
+++ b/pages/about.html
@@ -502,7 +502,9 @@ print 'It took ' + i + ' iterations to sort the deck.';
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li>&copy; Tokin ⬢ Cypher 2024</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+					<ul><li><a href="#">Affiliates</a></li><li><a href="#">Disclaimers</a></li><li><a href="#">Contests</a></li><li><a href="about.html">About</a></li></ul>
+					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ Cypher 2024</li></ul>
+					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
